--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,10 @@
 @import "tailwindcss";
+
+@theme inline {
+    --color-primary: var(--color-neutral-800);
+    --shadow-primary: 0px 2px 3px -1px #0000001a,0px 1px 0px 0px #191c2105,0px 0px 0px 1px #191c2114;
+}
+
+.dark {
+    --color-primary: var(--color-neutral-100);
+}
