routes and mdx setup added

--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,12 @@
 @import "tailwindcss";
+@plugin "@tailwindcss/typography";
 
 @theme inline {
     --color-primary: var(--color-neutral-800);
-    --shadow-primary: 0px 2px 3px -1px #0000001a,0px 1px 0px 0px #191c2105,0px 0px 0px 1px #191c2114;
+    --shadow-primary:
+        0px 2px 3px -1px #0000001a, 0px 1px 0px 0px #191c2105,
+        0px 0px 0px 1px #191c2114;
+    --color-secondary: var(--color-neutral-500);
 }
 
 .dark {
